Update to new version

--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Pages/CounterPage.razor
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Pages/CounterPage.razor
@@ -8,7 +8,11 @@
 
 <h2>Counter Display 2</h2>
 <Counter TestId="Counter2"/>
-
+<br />
+<hr />
+<h6>Reset button will clear all state in the Store and return you to the home page</h6>
 <ResetButton/>
-
+<br />
+<hr />
+<h6>EventStream is an example of middleware.  It adds each action to list.</h6>
 <EventStream/>
