Remove the data-qa tag not needed

--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Layout/NavMenu.razor
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Layout/NavMenu.razor
@@ -14,7 +14,7 @@
       </NavLink>
     </li>
     <li class="nav-item px-3">
-      <NavLink  data-qa="NavMenuCounter" class="nav-link" href="counter">
+      <NavLink class="nav-link" href="counter">
         <span class="oi oi-plus" aria-hidden="true"></span> Counter
       </NavLink>
     </li>
