I don't want links to open in same window and cause my SPA to have to reload.

--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Features/Application/Components/NavBar.razor
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Features/Application/Components/NavBar.razor
@@ -18,12 +18,12 @@
         </NavLink>
       </li>
       <li class="nav-item">
-        <NavLink class="nav-link" href="https://thefreezeteam.com/">
+        <NavLink class="nav-link" target="_blank" href="https://thefreezeteam.com/">
           TheFreezeTeam
         </NavLink>
       </li>
       <li class="nav-item">
-        <NavLink class="nav-link" href="https://timewarpengineering.github.io">
+        <NavLink class="nav-link" target="_blank" href="https://timewarpengineering.github.io">
           TimeWarp GitHub
         </NavLink>
       </li>
