Update to preview6
Added Tests to make sure all States can be cloned.  Mirrored the changes made to the BlazorState test app mostly.

--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/App.razor
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/App.razor
@@ -3,4 +3,8 @@
   The Router component displays whichever component has a @page
   directive matching the current URI.
 *@
-<Router AppAssembly="typeof(Startup).Assembly" />
+  <Router AppAssembly="typeof(Startup).Assembly">
+    <NotFoundContent>
+      <p>Sorry, there's nothing at this address.</p>
+    </NotFoundContent>
+  </Router>
