--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Features/Counter/Components/Counter.razor
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Features/Counter/Components/Counter.razor
@@ -3,5 +3,5 @@
 <div data-qa="@TestId">
   <p>Current count: @CounterState.Count</p>
 
-  <button class="btn btn-primary" onclick="@ButtonClick">Click me</button>
+  <button class="btn btn-primary" @onclick="@ButtonClick">Click me</button>
 </div>
