Update `@` in events

--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Features/Application/Components/AccountMenu.razor
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Features/Application/Components/AccountMenu.razor
@@ -12,7 +12,7 @@
         </NavLink>
       </li>
       <li class="nav-item dropdown">
-        <button type="button" class="btn btn-primary dropdown-toggle" onclick="@ButtonClick">
+        <button type="button" class="btn btn-primary dropdown-toggle" @onclick="ButtonClick">
           <span style="font-size:xx-large" class="oi oi-person" aria-hidden="true"></span>
         </button>
         <div class="dropdown-menu dropdown-menu-right bg-primary @ShowCssClass" aria-labelledby="navbarDropdown">
