--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Features/Application/Components/NavBar.razor
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Features/Application/Components/NavBar.razor
@@ -6,7 +6,7 @@
     <img src="/images/logo.png" alt="logo" style="width:40px;">
   </a>
   <!-- Toggler -->
-  <button class="navbar-toggler" type="button" onclick="@ToggleNavMenu" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" @onclick="ToggleNavMenu" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <!-- Links -->
