--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Features/Base/Components/ResetButton.razor
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Features/Base/Components/ResetButton.razor
@@ -1,5 +1,5 @@
 ﻿@inherits ResetButtonModel
 
 <div id="@Id" data-qa="@TestId">
-  <button class="btn btn-primary" @onclick="@ButtonClick">Reset Store</button>
+  <button class="btn btn-primary" @onclick="ButtonClick">Reset Store</button>
 </div>
