Until partial classes are implmented for blazor we use inheritance.
The convention has become to use `Base` as the name for the inherited class I have been using `Model`. This changes all the `Model` to `Base` which I think is better as Model is such an overloaded term.

--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/App.razor
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/App.razor
@@ -1,4 +1,4 @@
-﻿@inherits AppModel
+﻿@inherits AppBase
 @*
   The Router component displays whichever component has a @page
   directive matching the current URI.
