--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Features/Application/Components/AccountMenu.razor
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Features/Application/Components/AccountMenu.razor
@@ -1,4 +1,4 @@
-﻿@inherits AccountMenuModel
+﻿@inherits AccountMenuBase
 @using BlazorHosted_CSharp.Client.Pages.Authentication
 
 <!-- A grey horizontal navbar that becomes vertical on small screens -->
