--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Features/Application/Components/Footer.razor
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Features/Application/Components/Footer.razor
@@ -1,4 +1,4 @@
-﻿@inherits FooterModel
+﻿@inherits FooterBase
 <nav class="navbar fixed-bottom navbar-light bg-light">
   <BlazorLocation TestId="BlazorLocation" />
   <span>Version:@Version</span>
