--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Features/Application/Components/NavBar.razor
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Features/Application/Components/NavBar.razor
@@ -1,4 +1,4 @@
-﻿@inherits NavBarModel
+﻿@inherits NavBarBase
 <!-- A grey horizontal navbar that becomes vertical on small screens -->
 <header class="navbar fixed-top navbar-dark navbar-expand-sm bg-primary py-0">
   <!-- Brand/logo -->
