--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Features/Application/Components/SideBar.razor
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Features/Application/Components/SideBar.razor
@@ -1,4 +1,4 @@
-﻿@inherits SideBarModel
+﻿@inherits SideBarBase
 
 <nav class="navbar-collapse navbar-dark navbar">
   <div class="@NavMenuCssClass navbar-collapse">
