--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Components/SurveyPrompt.razor
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Components/SurveyPrompt.razor
@@ -1,4 +1,4 @@
-﻿@inherits SurveyPromptModel
+﻿@inherits SurveyPromptBase
 
 <div class="alert alert-secondary mt-4" role="alert">
   <span class="oi oi-pencil mr-2" aria-hidden="true"></span>
