--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Features/Base/Components/ResetButton.razor
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Features/Base/Components/ResetButton.razor
@@ -1,4 +1,4 @@
-﻿@inherits ResetButtonModel
+﻿@inherits ResetButtonBase
 
 <div id="@Id" data-qa="@TestId">
   <button class="btn btn-primary" @onclick="ButtonClick">Reset Store</button>
