--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Layout/MainLayout.razor
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Layout/MainLayout.razor
@@ -1,4 +1,4 @@
-﻿@inherits MainLayoutModel
+﻿@inherits MainLayoutBase
 <NavBar />
 <!-- Container should take up as minimum all of the view port but can be bigger. -->
 <div class="container-fluid">
