--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Layout/NavMenu.razor
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿@inherits NavMenuModel
+﻿@inherits NavMenuBase
 <div class="top-row pl-4 navbar navbar-dark">
   <a class="navbar-brand" href="/">BlazorHosted-CSharp</a>
   <button class="navbar-toggler" @onclick="ToggleNavMenu">
