Add data-qa attribute for testing

--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Pages/WeatherForecastsPage.razor
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/BlazorHosted-CSharp.Client/Pages/WeatherForecastsPage.razor
@@ -11,7 +11,7 @@
 }
 else
 {
-  <table class="table">
+  <table class="table" data-qa="WeatherForecastTable">
     <thead>
       <tr>
         <th>Date</th>
