--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/Client/Pages/Index.razor
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/Client/Pages/Index.razor
@@ -11,6 +11,6 @@ Welcome to your new app with Blazor-State management with an easily extensible p
 <br />
 <a href="https://github.com/TimeWarpEngineering/blazor-state">Blazor State GitHub project</a>
 <br />
-<a href="https://chrome.google.com/webstore/detail/redux-devtools/lmhkpmbekcpmknklioeibfkpmmfibljd?hl=en">Redux Dev Tools Chrome Extention </a>
+<a href="https://chrome.google.com/webstore/detail/redux-devtools/lmhkpmbekcpmknklioeibfkpmmfibljd?hl=en">Redux Dev Tools Chrome Extension </a>
 
 <SurveyPrompt Title="How is Blazor working for you?" />
