Rename BlazorHosted-CSharp to TimeWarp.Blazor And project files.

--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/Client/Layout/NavMenu.razor
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/Client/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿@inherits NavMenuBase
 <div class="top-row pl-4 navbar navbar-dark">
-  <a class="navbar-brand" href="/">BlazorHosted-CSharp</a>
+  <a class="navbar-brand" href="/">TimeWarp.Blazor</a>
   <button class="navbar-toggler" @onclick="ToggleNavMenu">
     <span class="navbar-toggler-icon"></span>
   </button>
