Add a using statement for Microsoft.AspNetCore.Components.Web in your top level _Imports.razor file
"Add a using statement for Microsoft.AspNetCore.Components.Authorization in your top level _Imports.razor file."  Not used in template yet.

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/_Imports.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/_Imports.razor
@@ -1,4 +1,5 @@
 ﻿@using System.Net.Http
+@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Routing
 @using TimeWarp.Blazor.Client
 @using TimeWarp.Blazor.Client.Layout
