--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
@@ -22,7 +22,7 @@
   <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
-  <app>@(await Html.RenderComponentAsync<Client.App>())</app>
+  <app>@(await Html.RenderComponentAsync<Client.App>(RenderMode.Server))</app>
 
   <script src="_content/BlazorState.js/blazorstate.js"></script>
   <script src="BlazorDualMode.js"></script>
