--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/App.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/App.razor
@@ -1,6 +1,10 @@
 ﻿@inherits AppBase
-  <Router AppAssembly="typeof(Startup).Assembly">
-    <NotFoundContent>
-      <p>Sorry, there's nothing at this address.</p>
-    </NotFoundContent>
+<Router AppAssembly="typeof(Program).Assembly">
+	<Found Context="routeData">
+		<RouteView RouteData="routeData" DefaultLayout="typeof(MainLayout)" />
+	</Found>
+	<NotFound>
+		<h1>Page not found</h1>
+		<p>Sorry, but there's nothing here!</p>
+	</NotFound>
   </Router>
