(Optional) Remove page specific _Imports.razor file with the @layout directive to use the default layout specified through the router instead.

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/_Imports.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/_Imports.razor
@@ -1,5 +1,4 @@
-﻿@layout MainLayout
-@using TimeWarp.Blazor.Client.Components
+﻿@using TimeWarp.Blazor.Client.Components
 @using TimeWarp.Blazor.Client.Features.Base.Components
 @using TimeWarp.Blazor.Client.Features.Counter.Components
 @using TimeWarp.Blazor.Client.Features.EventStream.Components
