Decoupling namespace from Folder structure.
They are two differnet purposes.
One is to organize file structure the other is to organize classes.
Just because I may want to group files doesn't mean I need to add another namespace.
Blazor components will require explicit namespaces like all other csharp classes.

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/AccountMenu.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/AccountMenu.razor
@@ -1,4 +1,5 @@
-﻿@inherits AccountMenuBase
+﻿@namespace TimeWarp.Blazor.Client.ApplicationFeature
+@inherits BaseComponent
 @using TimeWarp.Blazor.Client.Pages.Authentication
 
 <!-- A grey horizontal navbar that becomes vertical on small screens -->
