--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar.razor
@@ -1,4 +1,5 @@
-﻿@inherits NavBarBase
+﻿@namespace TimeWarp.Blazor.Client.ApplicationFeature
+@inherits BaseComponent
 <!-- A grey horizontal navbar that becomes vertical on small screens -->
 <header class="navbar fixed-top navbar-dark navbar-expand-sm bg-primary py-0">
   <!-- Brand/logo -->
@@ -38,6 +39,6 @@
         </NavLink>
       </li>
     </ul>
-    <AccountMenu/>
+    <AccountMenu />
   </div>
 </header>
