--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavLinks.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavLinks.razor
@@ -1,4 +1,5 @@
-﻿<ul class="navbar-nav mr-auto">
+﻿@namespace TimeWarp.Blazor.Client.ApplicationFeature
+<ul class="navbar-nav mr-auto">
   <li class="nav-item">
     <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
       <span class="oi oi-home" aria-hidden="true"></span> Home
