--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/SideBar.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/SideBar.razor
@@ -1,4 +1,5 @@
-﻿@inherits SideBarBase
+﻿@namespace TimeWarp.Blazor.Client.ApplicationFeature
+@inherits BaseComponent
 
 <nav class="navbar-collapse navbar-dark navbar">
   <div class="@NavMenuCssClass navbar-collapse">
