--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/SurveyPrompt.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/SurveyPrompt.razor
@@ -1,4 +1,4 @@
-﻿@inherits SurveyPromptBase
+﻿@inherits ComponentBase
 
 <div class="alert alert-secondary mt-4" role="alert">
   <span class="oi oi-pencil mr-2" aria-hidden="true"></span>
