--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Base/Components/ResetButton.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Base/Components/ResetButton.razor
@@ -1,4 +1,4 @@
-﻿@inherits ResetButtonBase
+﻿@inherits BaseComponent
 
 <div id="@Id" data-qa="@TestId">
   <button class="btn btn-primary" @onclick="ButtonClick">Reset Store</button>
