--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Counter/Components/Counter.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Counter/Components/Counter.razor
@@ -1,4 +1,5 @@
-﻿@inherits CounterBase
+﻿@namespace TimeWarp.Blazor.Client.CounterFeature
+@inherits BaseComponent
 
 <div data-qa="@TestId">
   <p>Current count: @CounterState.Count</p>
