Decoupling namespace from Folder structure.
Continue for all Features.

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/EventStream/Components/EventStream.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/EventStream/Components/EventStream.razor
@@ -1,8 +1,9 @@
-﻿@inherits EventStreamBase
+﻿@namespace TimeWarp.Blazor.Client.EventStreamFeature
+@inherits BaseComponent
 <h6>Event Stream</h6>
 <ul>
-  @foreach(var item in Events)
+  @foreach (var item in Events)
   {
-   <li>@item</li>
+    <li>@item</li>
   }
 </ul>
