--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/CounterPage.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/CounterPage.razor
@@ -1,18 +1,19 @@
-﻿@page "/counter"
+﻿@namespace TimeWarp.Blazor.Client.Pages
+@page "/counter"
 
 <h1>Counter Page</h1>
 
 <h2>Counter Display 1</h2>
-<Counter TestId="Counter1"/>
-<br/>
+<Counter TestId="Counter1" />
+<br />
 
 <h2>Counter Display 2</h2>
-<Counter TestId="Counter2"/>
+<Counter TestId="Counter2" />
 <br />
 <hr />
 <h6>Reset button will clear all state in the Store and return you to the home page</h6>
-<ResetButton/>
+<ResetButton />
 <br />
 <hr />
 <h6>EventStream is an example of middleware.  It adds each action to list.</h6>
-<EventStream/>
+<EventStream />
