--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/AccountMenu.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/AccountMenu.razor
@@ -1,6 +1,6 @@
 ﻿@namespace TimeWarp.Blazor.Client.ApplicationFeature
 @inherits BaseComponent
-@using TimeWarp.Blazor.Client.Pages.Authentication
+@using TimeWarp.Blazor.Client.Pages
 
 <!-- A grey horizontal navbar that becomes vertical on small screens -->
 <nav class="navbar navbar-dark navbar-expand-sm bg-primary p-0">
