--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Layout/MainLayout.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Layout/MainLayout.razor
@@ -1,13 +1,14 @@
-﻿@inherits MainLayoutBase
+﻿@namespace  TimeWarp.Blazor.Client.Layout
+@inherits MainLayoutBase
 <NavBar />
 <!-- Container should take up as minimum all of the view port but can be bigger. -->
 <div class="container-fluid">
   <div class="row">
     <!-- sidebar -->
     <nav class="col-md-2 d-none d-md-block bg-primary sidebar">
-        <SideBar />
+      <SideBar />
     </nav>
-    <!-- default is flex for pages 
+    <!-- default is flex for pages
         ml-auto will make this right justified
         col-md-10 will make it max width of 10 col
         pb-5 will give room for the footer on the bottom
