--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Layout/NavMenu.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Layout/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿@inherits NavMenuBase
+﻿@namespace  TimeWarp.Blazor.Client.Layout
+@inherits NavMenuBase
 <div class="top-row pl-4 navbar navbar-dark">
   <a class="navbar-brand" href="/">TimeWarp.Blazor</a>
   <button class="navbar-toggler" @onclick="ToggleNavMenu">
