--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/WeatherForecastsPage.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/WeatherForecastsPage.razor
@@ -1,4 +1,5 @@
-﻿@page "/weatherforecasts"
+﻿@namespace TimeWarp.Blazor.Client.Pages
+@page "/weatherforecasts"
 @inherits WeatherForecastsPageBase
 
 <h1>Weather forecast</h1>
