Update to 3.1 and latest Blazor-State

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
@@ -24,7 +24,7 @@
 <body>
   <app>@(await Html.RenderComponentAsync<Client.App>(RenderMode.ServerPrerendered))</app>
 
-  <script src="_content/BlazorState.js/blazorstate.js"></script>
+  <script src="_content/Blazor-State/blazorstate.js"></script>
   <script src="BlazorDualMode.js"></script>
   <script>
     const applicationVersion = 'TimeWarp.Blazor.Client.0.0.1';
