Use Partial classes
Update Counter Page to support testing Javascript. Based on the code in Blazor-State test App.

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavLinks.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavLinks.razor
@@ -1,4 +1,4 @@
-﻿@namespace TimeWarp.Blazor.Client.ApplicationFeature
+@namespace TimeWarp.Blazor.Client.ApplicationFeature
 <ul class="navbar-nav mr-auto">
   <li class="nav-item">
     <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
@@ -6,7 +6,7 @@
     </NavLink>
   </li>
   <li class="nav-item">
-    <NavLink class="nav-link" href="@CounterPageBase.Route">
+    <NavLink class="nav-link" href="@CounterPage.Route">
       <span class="oi oi-plus" aria-hidden="true"></span> Counter
     </NavLink>
   </li>
