--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/Index.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/Index.razor
@@ -2,7 +2,7 @@
 @page "/"
 @inherits BaseComponent
 
-<h1>@ApplicationState.Name</h1>
+<h1 data-qa="HomeHeader">@ApplicationState.Name</h1>
 
 <a href="https://timewarpengineering.github.io/blazor-state/">Blazor State Documentation</a>
 <br />
