--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/CounterPage.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/CounterPage.razor
@@ -1,4 +1,6 @@
-﻿@namespace TimeWarp.Blazor.Client.Pages
+@namespace TimeWarp.Blazor.Client.Pages
+@using BlazorState;
+@inherits BaseComponent
 @page "/counter"
 
 <h1>Counter Page</h1>
@@ -13,6 +15,14 @@
 <hr />
 <h6>Reset button will clear all state in the Store and return you to the home page</h6>
 <ResetButton />
+<br />
+<hr />
+<h6>Click below to send a Change Route Request that should take back to home page.</h6>
+<button class="btn btn-primary" data-qa="ChangeRoute" @onclick="ButtonClick">Change Route to Home</button>
+<br />
+<hr />
+<h6>Click below to send a IncrementCountAction via JsInterop.</h6>
+<button class="btn btn-primary" data-qa="JsInterop" onclick="window.InteropTest()">Increment Count by 7 via JavaScript Interop</button>
 <br />
 <hr />
 <h6>EventStream is an example of middleware.  It adds each action to list.</h6>
