--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
@@ -26,6 +26,7 @@
 
   <script src="_content/Blazor-State/blazorstate.js"></script>
   <script src="BlazorDualMode.js"></script>
+  <script src="InteropTest.js"></script>
   <script>
     const applicationVersion = 'TimeWarp.Blazor.Client.0.0.1';
     configureBlazor(applicationVersion);
