Move all of the Client Project into TimeWarp.Blazor namespace.

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/App.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/App.razor
@@ -1,5 +1,5 @@
-﻿@inherits AppBase
-<Router AppAssembly="typeof(Program).Assembly">
+@inherits AppBase
+<Router AppAssembly="typeof(Client.Program).Assembly">
   <Found Context="routeData">
     <RouteView RouteData="routeData" DefaultLayout="typeof(MainLayout)" />
   </Found>
