--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/_Imports.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/_Imports.razor
@@ -1,2 +1,2 @@
-﻿@using TimeWarp.Blazor.Client.Components
-@using TimeWarp.Blazor.Client.Pages
+﻿@using TimeWarp.Blazor.Components
+@using TimeWarp.Blazor.Pages
