--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/CounterPage.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/CounterPage.razor
@@ -1,4 +1,4 @@
-@namespace TimeWarp.Blazor.Client.Pages
+@namespace TimeWarp.Blazor.Pages
 @using BlazorState;
 @inherits BaseComponent
 @page "/counter"
