--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/_Imports.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/_Imports.razor
@@ -1,4 +1,4 @@
-﻿@using TimeWarp.Blazor.Client.Components
-@using TimeWarp.Blazor.Client.BaseFeature
-@using TimeWarp.Blazor.Client.CounterFeature
-@using TimeWarp.Blazor.Client.EventStreamFeature
+﻿@using TimeWarp.Blazor.Components
+@using TimeWarp.Blazor.BaseFeature
+@using TimeWarp.Blazor.CounterFeature
+@using TimeWarp.Blazor.EventStreamFeature
