--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/SideBar.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/SideBar.razor
@@ -1,4 +1,4 @@
-﻿@namespace TimeWarp.Blazor.Client.ApplicationFeature
+﻿@namespace TimeWarp.Blazor.ApplicationFeature
 @inherits BaseComponent
 
 <nav class="navbar-collapse navbar-dark navbar">
