--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Base/Components/ResetButton.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Base/Components/ResetButton.razor
@@ -1,4 +1,4 @@
-﻿@namespace TimeWarp.Blazor.Client.BaseFeature
+﻿@namespace TimeWarp.Blazor.BaseFeature
 @inherits BaseComponent
 
 <div id="@Id" data-qa="@TestId">
