--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Layout/MainLayout.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Layout/MainLayout.razor
@@ -1,4 +1,4 @@
-﻿@namespace TimeWarp.Blazor.Client.Layout
+﻿@namespace TimeWarp.Blazor.Layout
 @inherits MainLayoutBase
 <NavBar />
 <!-- Container should take up as minimum all of the view port but can be bigger. -->
