--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/Authentication/ChangePasswordPage.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/Authentication/ChangePasswordPage.razor
@@ -1,4 +1,4 @@
-﻿@namespace TimeWarp.Blazor.Client.Pages
+﻿@namespace TimeWarp.Blazor.Pages
 @page "/changePassword"
 
 @inherits ChangePasswordPageBase
