--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
@@ -22,13 +22,13 @@
   <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
-  <app>@(await Html.RenderComponentAsync<Client.App>(RenderMode.Server))</app>
+  <app>@(await Html.RenderComponentAsync<App>(RenderMode.Server))</app>
 
   <script src="_content/Blazor-State/blazorstate.js"></script>
   <script src="BlazorDualMode.js"></script>
   <script src="InteropTest.js"></script>
   <script>
-    const applicationVersion = 'TimeWarp.Blazor.Client.0.0.1';
+    const applicationVersion = 'TimeWarp.Blazor.0.0.1';
     configureBlazor(applicationVersion);
   </script>
 </body>
