--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Server/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@namespace TimeWarp.Blazor.Server.Pages
+@namespace TimeWarp.Blazor.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
