<SolutionName>.Features.<FeatureName>s
I itterated over many namespace options.
All compiles and runs.

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/AccountMenu.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/AccountMenu.razor
@@ -1,4 +1,4 @@
-﻿@namespace TimeWarp.Blazor.ApplicationFeature
+@namespace TimeWarp.Blazor.Features.Applications.Components
 @inherits BaseComponent
 @using TimeWarp.Blazor.Pages
 
