--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/EventStream/Components/EventStream.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/EventStream/Components/EventStream.razor
@@ -1,4 +1,4 @@
-﻿@namespace TimeWarp.Blazor.EventStreamFeature
+@namespace TimeWarp.Blazor.Features.EventStreams
 @inherits BaseComponent
 <h6>Event Stream</h6>
 <ul>
