--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/_Imports.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/_Imports.razor
@@ -1,4 +1,4 @@
 ﻿@using TimeWarp.Blazor.Components
-@using TimeWarp.Blazor.BaseFeature
-@using TimeWarp.Blazor.CounterFeature
-@using TimeWarp.Blazor.EventStreamFeature
+@using TimeWarp.Blazor.Features.Bases
+@using TimeWarp.Blazor.Features.Counters
+@using TimeWarp.Blazor.Features.EventStreams
