--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar.razor
@@ -1,4 +1,4 @@
-﻿@namespace TimeWarp.Blazor.ApplicationFeature
+@namespace TimeWarp.Blazor.Features.Applications.Components
 @inherits BaseComponent
 <!-- A grey horizontal navbar that becomes vertical on small screens -->
 <header class="navbar fixed-top navbar-dark navbar-expand-sm bg-primary py-0">
