Seperate Features by Client and Server
This was done before but now it is the least significant digit vs most significant
so features sort together.

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavLinks.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavLinks.razor
@@ -1,4 +1,4 @@
-@namespace TimeWarp.Blazor.Features.Applications.Components
+@namespace TimeWarp.Blazor.Features.Applications.Client.Components
 @using TimeWarp.Blazor.Pages
 
 <ul class="navbar-nav mr-auto">
