--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/SideBar.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/SideBar.razor
@@ -1,4 +1,4 @@
-@namespace TimeWarp.Blazor.Features.Applications.Components
+@namespace TimeWarp.Blazor.Features.Applications.Client.Components
 @inherits BaseComponent
 
 <nav class="navbar-collapse navbar-dark navbar">
