--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Counter/Components/Counter.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Counter/Components/Counter.razor
@@ -1,4 +1,4 @@
-﻿@namespace TimeWarp.Blazor.Features.Counters
+﻿@namespace TimeWarp.Blazor.Features.Counters.Client
 @inherits BaseComponent
 
 <div data-qa="@TestId">
