--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Layout/_Imports.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Layout/_Imports.razor
@@ -1,3 +1,3 @@
 @using TimeWarp.Blazor.Components
 @using TimeWarp.Blazor.Pages
-@using TimeWarp.Blazor.Features.Applications.Components
+@using TimeWarp.Blazor.Features.Applications.Client.Components
