--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/_Imports.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/_Imports.razor
@@ -1,4 +1,4 @@
 ﻿@using TimeWarp.Blazor.Components
 @using TimeWarp.Blazor.Features.Bases
-@using TimeWarp.Blazor.Features.Counters
+@using TimeWarp.Blazor.Features.Counters.Client
 @using TimeWarp.Blazor.Features.EventStreams
