--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/BlazorLocation.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/BlazorLocation.razor
@@ -1,4 +1,6 @@
-﻿@inherits BlazorStateComponent
+@namespace TimeWarp.Blazor.Components
 @using BlazorState;
+
+@inherits BlazorStateComponent
 
 <div data-qa="@TestId">@LocationName</div>
