--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/ResetButton.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/ResetButton.razor
@@ -1,5 +1,6 @@
-﻿@namespace TimeWarp.Blazor.Features.Bases
+@namespace TimeWarp.Blazor.Components
 @inherits BaseComponent
+@using TimeWarp.Blazor.Features.Bases.Client;
 
 <div id="@Id" data-qa="@TestId">
   <button class="btn btn-primary" @onclick="ButtonClick">Reset Store</button>
