--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/Footer.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/Footer.razor
@@ -1,5 +1,7 @@
 @namespace TimeWarp.Blazor.Features.Applications.Client.Components
 @inherits BaseComponent
+@using TimeWarp.Blazor.Components
+
 <nav class="navbar fixed-bottom navbar-light bg-light">
   <BlazorLocation TestId="BlazorLocation" />
   <span>Version:@Version</span>
