--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/CounterPage.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/CounterPage.razor
@@ -1,5 +1,7 @@
 @namespace TimeWarp.Blazor.Pages
 @using BlazorState;
+@using TimeWarp.Blazor.Components
+
 @inherits BaseComponent
 @page "/counter"
 
