Move NavMenu to Application Components
All Test pass

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavMenu.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿@namespace TimeWarp.Blazor.Layout
+@namespace TimeWarp.Blazor.Features.Applications.Client.Components
 @inherits NavMenuBase
 <div class="top-row pl-4 navbar navbar-dark">
   <a class="navbar-brand" href="/">TimeWarp.Blazor</a>
