--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/App.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/App.razor
@@ -1,7 +1,7 @@
 @inherits AppBase
 <Router AppAssembly="typeof(Client.Program).Assembly">
   <Found Context="routeData">
-    <RouteView RouteData="routeData" DefaultLayout="typeof(MainLayout)" />
+    <RouteView RouteData="routeData" DefaultLayout="typeof(TimeWarp.Blazor.Components.MainLayout)" />
   </Found>
   <NotFound>
     <h1>Page not found</h1>
