--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/MainLayout.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/MainLayout.razor
@@ -1,5 +1,7 @@
-﻿@namespace TimeWarp.Blazor.Layout
+@namespace TimeWarp.Blazor.Components
+@using TimeWarp.Blazor.Features.Applications.Client.Components 
 @inherits MainLayoutBase
+
 <NavBar />
 <!-- Container should take up as minimum all of the view port but can be bigger. -->
 <div class="container-fluid">
