--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/CounterPage.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/CounterPage.razor
@@ -1,8 +1,10 @@
 @namespace TimeWarp.Blazor.Pages
-@using BlazorState;
+
 @using TimeWarp.Blazor.Components
+@using TimeWarp.Blazor.Features.Counters.Client.Components
 
 @inherits BaseComponent
+
 @page "/counter"
 
 <h1>Counter Page</h1>
