--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/AccountMenu.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/AccountMenu.razor
@@ -1,6 +1,7 @@
 @namespace TimeWarp.Blazor.Features.Applications.Client.Components
 @inherits BaseComponent
 @using TimeWarp.Blazor.Pages
+@using Microsoft.AspNetCore.Components.Routing
 
 <!-- A grey horizontal navbar that becomes vertical on small screens -->
 <nav class="navbar navbar-dark navbar-expand-sm bg-primary p-0">
