--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavLinks.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavLinks.razor
@@ -1,5 +1,6 @@
 @namespace TimeWarp.Blazor.Features.Applications.Client.Components
 @using TimeWarp.Blazor.Pages
+@using Microsoft.AspNetCore.Components.Routing
 
 <ul class="navbar-nav mr-auto">
   <li class="nav-item">
