--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavMenu.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavMenu.razor
@@ -1,5 +1,9 @@
 @namespace TimeWarp.Blazor.Features.Applications.Client.Components
+
+@using Microsoft.AspNetCore.Components.Routing
+
 @inherits NavMenuBase
+
 <div class="top-row pl-4 navbar navbar-dark">
   <a class="navbar-brand" href="/">TimeWarp.Blazor</a>
   <button class="navbar-toggler" @onclick="ToggleNavMenu">
