--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/_Imports.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/_Imports.razor
@@ -1,2 +1,2 @@
-@using Microsoft.AspNetCore.Components.Routing
+@*@using Microsoft.AspNetCore.Components.Routing*@
 @using Microsoft.AspNetCore.Components.Web
