Fix WeatherForecastPage to use partial class properly

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavLinks.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavLinks.razor
@@ -14,7 +14,7 @@
     </NavLink>
   </li>
   <li class="nav-item">
-    <NavLink class="nav-link" href="@WeatherForecastsPageBase.Route">
+    <NavLink class="nav-link" href="@WeatherForecastsPage.Route">
       <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
     </NavLink>
   </li>
