Client.Components is redundant as Components only are on the client

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/MainLayout.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/MainLayout.razor
@@ -1,5 +1,5 @@
 @namespace TimeWarp.Blazor.Components
-@using TimeWarp.Blazor.Features.Applications.Client.Components 
+@using TimeWarp.Blazor.Features.Applications.Components 
 @inherits MainLayoutBase
 
 <NavBar />
