--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar.razor
@@ -1,4 +1,4 @@
-@namespace TimeWarp.Blazor.Features.Applications.Client.Components
+@namespace TimeWarp.Blazor.Features.Applications.Components
 
 @using Microsoft.AspNetCore.Components.Routing
 
