--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/CounterPage.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/CounterPage.razor
@@ -1,7 +1,7 @@
 @namespace TimeWarp.Blazor.Pages
 
 @using TimeWarp.Blazor.Components
-@using TimeWarp.Blazor.Features.Counters.Client.Components
+@using TimeWarp.Blazor.Features.Counters.Components
 
 @inherits BaseComponent
 
