--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar.razor
@@ -7,7 +7,7 @@
 <header class="navbar fixed-top navbar-dark navbar-expand-sm bg-primary py-0">
   <!-- Brand/logo -->
   <a class="navbar-brand" href="#">
-    <img src="/images/logo.png" alt="logo" style="width:40px;">
+    <img src="@ApplicationState.Logo" alt="logo" style="width:40px;">
   </a>
   <!-- Toggler -->
   <button class="navbar-toggler" type="button" @onclick="ToggleNavMenu" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
