Remove _imports from Features folder

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/AccountMenu.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/AccountMenu.razor
@@ -1,5 +1,6 @@
 @namespace TimeWarp.Blazor.Features.Applications.Components
 @inherits BaseComponent
+@using TimeWarp.Blazor.Features.Bases.Client
 @using TimeWarp.Blazor.Pages
 @using Microsoft.AspNetCore.Components.Routing
 
