--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/Footer.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/Footer.razor
@@ -1,6 +1,9 @@
 @namespace TimeWarp.Blazor.Features.Applications.Components
-@inherits BaseComponent
+
 @using TimeWarp.Blazor.Components
+@using TimeWarp.Blazor.Features.Bases.Client
+
+@inherits BaseComponent
 
 <nav class="navbar fixed-bottom navbar-light bg-light">
   <BlazorLocation TestId="BlazorLocation" />
