--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavBar.razor
@@ -1,5 +1,6 @@
 @namespace TimeWarp.Blazor.Features.Applications.Components
 
+@using TimeWarp.Blazor.Features.Bases.Client
 @using Microsoft.AspNetCore.Components.Routing
 
 @inherits BaseComponent
