Remove another _imports
I don't know if I like them or not.  If so why not just add everything to the root one unless there is a conflict?

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/CounterPage.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/CounterPage.razor
@@ -1,7 +1,9 @@
 @namespace TimeWarp.Blazor.Pages
 
+@using TimeWarp.Blazor.Features.Bases.Client
 @using TimeWarp.Blazor.Components
 @using TimeWarp.Blazor.Features.Counters.Components
+@using TimeWarp.Blazor.Features.EventStreams.Client
 
 @inherits BaseComponent
 
