--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/WeatherForecastsPage.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/WeatherForecastsPage.razor
@@ -1,5 +1,9 @@
 @namespace TimeWarp.Blazor.Pages
+
+@using TimeWarp.Blazor.Features.Bases.Client
+
 @page "/weatherforecasts"
+
 @inherits BaseComponent
 
 <h1>Weather forecast</h1>
