--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/Index.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/Index.razor
@@ -1,5 +1,10 @@
-﻿@namespace TimeWarp.Blazor.Pages
+@namespace TimeWarp.Blazor.Pages
+
+@using TimeWarp.Blazor.Features.Bases.Client
+@using TimeWarp.Blazor.Components
+
 @page "/"
+
 @inherits BaseComponent
 
 <h1 data-qa="HomeHeader">@ApplicationState.Name</h1>
