Use partial class for App

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/App.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/App.razor
@@ -2,7 +2,7 @@
 
 @using Microsoft.AspNetCore.Components.Routing
 
-@inherits AppBase
+@inherits ComponentBase
 
 <Router AppAssembly="typeof(Client.Program).Assembly">
   <Found Context="routeData">
