--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/Authentication/LoginPage.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/Authentication/LoginPage.razor
@@ -1,6 +1,6 @@
-﻿@namespace TimeWarp.Blazor.Pages
+@namespace TimeWarp.Blazor.Pages
 @page "/login"
 
-@inherits LoginPageBase
+@inherits ComponentBase
 
 <h1>Login Page</h1>
