Use partial class for ProfilePage

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/Authentication/ProfilePage.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/Authentication/ProfilePage.razor
@@ -1,6 +1,6 @@
-﻿@namespace TimeWarp.Blazor.Pages
+@namespace TimeWarp.Blazor.Pages
 @page "/Profile"
 
-@inherits ProfilePageBase
+@inherits ComponentBase
 
 <h1>Profile Page</h1>
