Use partial class for ProfilePage

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/AccountMenu.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/AccountMenu.razor
@@ -19,7 +19,7 @@
           <span style="font-size:xx-large" class="oi oi-person" aria-hidden="true"></span>
         </button>
         <div class="dropdown-menu dropdown-menu-right bg-primary @ShowCssClass" aria-labelledby="navbarDropdown">
-          <NavLink class="dropdown-item nav-link nav-item" href="@ProfilePageBase.Route">
+          <NavLink class="dropdown-item nav-link nav-item" href="@ProfilePage.Route">
             <span class="oi oi-person" aria-hidden="true"></span>
             Profile
           </NavLink>
