Use partial class for ChangePassword

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/AccountMenu.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/AccountMenu.razor
@@ -24,7 +24,7 @@
             Profile
           </NavLink>
           <div class="dropdown-divider"></div>
-          <NavLink class="dropdown-item nav-link nav-item" href="@ChangePasswordPageBase.Route">
+          <NavLink class="dropdown-item nav-link nav-item" href="@ChangePasswordPage.Route">
             <span class="oi oi-bolt" aria-hidden="true"></span> Change Password
           </NavLink>
           <NavLink class="dropdown-item nav-link nav-item" href="@LogoutPageBase.Route">
