--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/Authentication/ChangePasswordPage.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/Authentication/ChangePasswordPage.razor
@@ -1,6 +1,6 @@
-﻿@namespace TimeWarp.Blazor.Pages
+@namespace TimeWarp.Blazor.Pages
 @page "/changePassword"
 
-@inherits ChangePasswordPageBase
+@inherits ComponentBase
 
 <h1>Change Password Page</h1>
