Use partial class for LogoutPage

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/Authentication/LogoutPage.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/Authentication/LogoutPage.razor
@@ -1,6 +1,6 @@
-﻿@namespace TimeWarp.Blazor.Pages
+@namespace TimeWarp.Blazor.Pages
 @page "/logout"
 
-@inherits LogoutPageBase
+@inherits BaseComponent
 
 <h1>Logout Page</h1>
