Use BaseComponent vs ComponentBase for consistency.

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavMenu.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavMenu.razor
@@ -2,7 +2,7 @@
 
 @using Microsoft.AspNetCore.Components.Routing
 
-@inherits ComponentBase
+@inherits BaseComponent
 
 <div class="top-row pl-4 navbar navbar-dark">
   <a class="navbar-brand" href="/">TimeWarp.Blazor</a>
