Use partial class for ChangePasswordPage

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/AccountMenu.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/AccountMenu.razor
@@ -27,7 +27,7 @@
           <NavLink class="dropdown-item nav-link nav-item" href="@ChangePasswordPage.Route">
             <span class="oi oi-bolt" aria-hidden="true"></span> Change Password
           </NavLink>
-          <NavLink class="dropdown-item nav-link nav-item" href="@LogoutPageBase.Route">
+          <NavLink class="dropdown-item nav-link nav-item" href="@LogoutPage.Route">
             <span class="oi oi-account-logout" aria-hidden="true"></span> Logout
           </NavLink>
         </div>
