--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/Authentication/ChangePasswordPage.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/Authentication/ChangePasswordPage.razor
@@ -1,6 +1,10 @@
 @namespace TimeWarp.Blazor.Pages
+
+@using TimeWarp.Blazor.Features.Bases.Client
+
 @page "/changePassword"
 
-@inherits ComponentBase
+@inherits BaseComponent
 
 <h1>Change Password Page</h1>
+
