Use BaseComponent vs ComponentBase for consistency.

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/Authentication/ProfilePage.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/Authentication/ProfilePage.razor
@@ -1,6 +1,9 @@
 @namespace TimeWarp.Blazor.Pages
+
+@using TimeWarp.Blazor.Features.Bases.Client
+
 @page "/Profile"
 
-@inherits ComponentBase
+@inherits BaseComponent
 
 <h1>Profile Page</h1>
