Use BaseComponent vs ComponentBase for consistency.

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/Authentication/LoginPage.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/Authentication/LoginPage.razor
@@ -1,6 +1,9 @@
 @namespace TimeWarp.Blazor.Pages
+
+@using TimeWarp.Blazor.Features.Bases.Client
+
 @page "/login"
 
-@inherits ComponentBase
+@inherits BaseComponent
 
 <h1>Login Page</h1>
