--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/MainLayout.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/MainLayout.razor
@@ -1,6 +1,7 @@
 @namespace TimeWarp.Blazor.Components
-@using TimeWarp.Blazor.Features.Applications.Components 
-@inherits MainLayoutBase
+@using TimeWarp.Blazor.Features.Applications.Components
+
+@inherits LayoutComponentBase
 
 <NavBar />
 <!-- Container should take up as minimum all of the view port but can be bigger. -->
