Use BaseComponent vs ComponentBase for consistency.

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/BlazorLocation.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/BlazorLocation.razor
@@ -1,6 +1,7 @@
 @namespace TimeWarp.Blazor.Components
-@using BlazorState;
 
-@inherits BlazorStateComponent
+@using TimeWarp.Blazor.Features.Bases.Client
+
+@inherits BaseComponent
 
 <div data-qa="@TestId">@LocationName</div>
