Use Same namespace across projects for the same feature.

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/Footer.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/Footer.razor
@@ -1,7 +1,7 @@
 @namespace TimeWarp.Blazor.Features.Applications.Components
 
 @using TimeWarp.Blazor.Components
-@using TimeWarp.Blazor.Features.Bases.Client
+@using TimeWarp.Blazor.Features.Bases
 
 @inherits BaseComponent
 
