--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Counter/Components/Counter.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Counter/Components/Counter.razor
@@ -1,5 +1,5 @@
 @namespace TimeWarp.Blazor.Features.Counters.Components
-@using TimeWarp.Blazor.Features.Bases.Client
+@using TimeWarp.Blazor.Features.Bases
 @inherits BaseComponent
 
 <div data-qa="@TestId">
