--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/CounterPage.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Pages/CounterPage.razor
@@ -1,9 +1,9 @@
 @namespace TimeWarp.Blazor.Pages
 
-@using TimeWarp.Blazor.Features.Bases.Client
+@using TimeWarp.Blazor.Features.Bases
 @using TimeWarp.Blazor.Components
 @using TimeWarp.Blazor.Features.Counters.Components
-@using TimeWarp.Blazor.Features.EventStreams.Client
+@using TimeWarp.Blazor.Features.EventStreams
 
 @inherits BaseComponent
 
