--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/BlazorLocation.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/BlazorLocation.razor
@@ -1,6 +1,6 @@
 @namespace TimeWarp.Blazor.Components
 
-@using TimeWarp.Blazor.Features.Bases.Client
+@using TimeWarp.Blazor.Features.Bases
 
 @inherits BaseComponent
 
