--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/ResetButton.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/ResetButton.razor
@@ -1,6 +1,6 @@
 @namespace TimeWarp.Blazor.Components
 @inherits BaseComponent
-@using TimeWarp.Blazor.Features.Bases.Client;
+@using TimeWarp.Blazor.Features.Bases;
 
 <div id="@Id" data-qa="@TestId">
   <button class="btn btn-primary" @onclick="ButtonClick">Reset Store</button>
