--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/SurveyPrompt.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Components/SurveyPrompt.razor
@@ -1,5 +1,5 @@
 @namespace TimeWarp.Blazor.Components
-@using TimeWarp.Blazor.Features.Bases.Client
+@using TimeWarp.Blazor.Features.Bases
 @inherits BaseComponent
 
 <div class="alert alert-secondary mt-4" role="alert">
