--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavMenu.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/NavMenu.razor
@@ -1,7 +1,7 @@
 @namespace TimeWarp.Blazor.Features.Applications.Components
 
 @using Microsoft.AspNetCore.Components.Routing
-@using TimeWarp.Blazor.Features.Bases.Client
+@using TimeWarp.Blazor.Features.Bases
 
 @inherits BaseComponent
 
