--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/SideBar.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/Application/Components/SideBar.razor
@@ -1,5 +1,5 @@
 @namespace TimeWarp.Blazor.Features.Applications.Components
-@using TimeWarp.Blazor.Features.Bases.Client
+@using TimeWarp.Blazor.Features.Bases
 @inherits BaseComponent
 
 <nav class="navbar-collapse navbar-dark navbar">
