--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/EventStream/Components/EventStream.razor
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/Features/EventStream/Components/EventStream.razor
@@ -1,5 +1,5 @@
-@namespace TimeWarp.Blazor.Features.EventStreams.Client
-@using TimeWarp.Blazor.Features.Bases.Client
+@namespace TimeWarp.Blazor.Features.EventStreams
+@using TimeWarp.Blazor.Features.Bases
 @inherits BaseComponent
 <h6>Event Stream</h6>
 <ul>
